fixed screen shift on mobile devices, optimized appearance

--- a/responsive.css
+++ b/responsive.css
@@ -1,27 +1,36 @@
 @media screen and (max-width: 2560px) {
-    nav.navbar.nav {height: 7vh;}
+   
+
+    nav.navbar.nav {height: 15vh;}
 
     img.play {width: 4%;}
 
     img#man {    
-        width: 4%;
+        width: 20%;
         left: 34%;}
+
+        a#scrollUp {right: 565px;}
 }
 
 
 @media screen and (max-width: 1440px) {
-    nav.navbar.nav {height: 15vh;}
+    nav.navbar.nav {
+        height: 15vh;
+        margin-right: 15px;
+    }
 
     img.play {width: 7%;}
 
     img#man {    
-        width: 7%;
+        width: 23%;
         left: 21%;}
+
+        a#scrollUp {right: 25px;}
 
 }
 
 @media  screen and (max-width: 1025px) {
-    div.logo-box {margin-left: 0px;}
+    div.logo-box {margin-left: 30px;}
 
     #sphere hr {width: 7.375rem ;}
 
@@ -38,7 +47,7 @@
     img.woman1 {right: 21%;}
 
     div.photos img {
-        width: 15%;
+        width: 18%;
     }   
 
     img#man {left: 27%;}
@@ -75,6 +84,11 @@
         right: 320px;
     }
 
+    nav.navbar.nav {
+        height: 16vh;
+        width: 98%;
+    }
+
     .header {
         flex-direction: column;
         align-items: center;
@@ -83,7 +97,7 @@
 
     .header h1 {text-align: center; }
 
-    .header a.btn {margin-left: 50px;}
+    .header a.btn {margin-left: 20px;}
 
     
     
@@ -127,10 +141,14 @@
         flex-direction: column;
         align-items: center;
     }
-    .vision.container {height: 35.5625rem;;}
+    .vision.container {
+        height: 35.5625rem;
+        margin-left: 7px;
+    }
     .vision-left { 
         margin-top: 7.5rem;
-        display: flex;}
+        display: flex;
+    }
 
     .vision-left h2 {margin-top: -7.5rem;}
 
@@ -155,12 +173,17 @@
     .front1, .front2, .front3, .front4 {font-size: .9375rem;} 
     .front1, .front2, .front3, .front4 {position: relative;}
 
-    .front1 {left: 12px;}
-    .front2 {left: 45px;}
-    .front3 {left: 70px;}
-    .front4 {left: 75px;}
+    .front1 {left: -5px;}
+    .front2 {left: 20px;}
+    .front3 {left: 37px;}
+    .front4 {left: 55px;}
 
-    img.play { top: 138rem;}
+    img.map {
+        width: 90%;
+        margin: 2.125rem;
+    }
+
+    img.play { top: 135rem;}
 
     #promo.container {
         width: 50%;
@@ -169,32 +192,41 @@
         height: 30%;
     }
 
+
+
     img.dots {    
         left: 45%;
-    height: 21.75rem;
+    height: 14.75rem;
     top: 10px;}
 
     img.woman1 {
-        left: 2%;
         width: 90%;
         height: 8%;
-        top: -23px;
+        top: 10px;
+        right: 1%;
+    
 }
     
 
     .quote {
-        position: absolute;
-        width: 79%;
-        top: 785%;
+        width: 116%;
+        top: 833%;
         display: grid;
-        right: -10%;
+        margin-top: 121px;
+        margin-left: -134px;
        }
 
         .quote img {
-            width: 15%;
-            left: 40%;}
+            width: 30%;
+            left: 71%;
+            top: -4rem;
+        }
 
-    .quote h4 {margin-top: 4.125rem;}
+    .quote h4 {
+        margin-top: -3.875rem;
+        margin-left: 115px;
+        width: 116%;
+    }
     
     .quote h4 br {display: none;}
 
@@ -203,9 +235,10 @@
     .quote h5, .quote h6 {  
           justify-items: center;
             display: grid;
+            margin-left: 74%;
     }
 
-    #trust.container {margin-top: 15.1875rem;}
+    #trust.container {margin-top: 3.1875rem;}
 
     .trust h2 {margin-bottom: 0;}
     .trust img {
@@ -213,7 +246,7 @@
         margin-top: 0;
     }
 
-    div.pymt h3 {margin-top: 50px;}
+    div.pymt h3 {margin-top: 30px;}
 
     .price-card {
         flex-direction: column;
@@ -230,8 +263,11 @@
 
     .small-grid {width: 90%;}
 
-    #hire-us {flex-direction: column;}
-
+    #hire-us {
+        flex-direction: column;
+        
+    }
+    #hire-us.container {margin-left: 15px;}
     .hire-us {
         margin-left: 25px;
         display: flex;
@@ -244,7 +280,7 @@
 
     .div.photos {margin-left: 5px;}
     div.photos img {
-        width: 10%;
+        width: 15%;
         height: 10%;
     }
 
@@ -286,7 +322,31 @@
 
 /* Mobile */
 
+@media screen and (max-width: 426px) {
+
+    div.logo-box {margin-left: -130px;}
+
+    img.play {  top: 144rem;}
+
+    #hire-us.container {
+        margin-left: 5px;
+        margin-top: 0;
+    }
+    div.right {bottom: 0;}
+
+    div.photos {
+        margin-left: 22px;
+        width: 100%;
+    }
+    div.form h4 {padding-left: 0;}
+
+    div.form h4 br {display: none;}
+
+}
+
 @media screen and (max-width: 376px) {
+
+    body {margin-left: -6px;}
     .navbar.nav {background-image: linear-gradient(-65deg, #f0f0f5 3%, #fff 0% -22% , #f2f2f2 19%);}
     [aria-controls=navbarDropdown] {
         display: block;
@@ -326,7 +386,7 @@
     .header a.btn{margin-left: -10px;}
     
     div.logo-box {
-        margin-right: 18%;
+        margin-right: 0%;
         width: 70%;
     }
     .key h2 {margin-left: 40%;}
@@ -433,7 +493,7 @@
         
     img.dots {
         left: 49%;
-        height: 18.75rem;
+        height: 16.75rem;
         top: 10px;
     }
 
@@ -441,24 +501,29 @@
 
     img.woman1 {
     left: -2%;
-    width: 100%;
+    width: 90%;
     height: 8%;
     top: 10px;
     }
     .quote {
-        margin-top: 40.125rem;
+        margin-top: -40px;
+        margin-left: 25px;
         right: -35%;
     }
     .quote img.hub {
-        top: 7.125rem;
-        width: 30%;
-        left: 33%;
+        top: 5.125rem;
+        width: 100%;
+        left: 5%;
     }
 
     .quote h4 {
         margin-bottom: 0;
         margin-top: 7.125rem;
+        margin-left: -1px;
     }
+
+    .quote h5,
+    .quote h6 {margin-left: -20px;}
 
     div.pymt {margin-left: 15%;}
 
@@ -476,9 +541,9 @@
     
 
     #trust.container {
-        margin-left: 10%;
-        margin-top: 16.1875rem;}
-    div.trust {
+        margin-left: 10%;}
+
+        div.trust {
         flex-direction: column;
         align-items: center;
         gap: 25px;
@@ -490,7 +555,10 @@
         width: 80% ;
         grid-template-columns: 1fr;
     }
-    #hire-us.container {margin-top: 0.25rem;}
+    #hire-us.container {
+        margin-top: 0.25rem;
+        margin-left: 60px;
+    }
 
     #hire-us.container hr {
         width: 90%;
@@ -531,6 +599,8 @@
     margin-left: 0px;
    }
    div.privacy a {margin-right: 0.25rem;}
+
+   footer {margin-left: 70px;}
 
    div.footer-top {display: block;}
 
@@ -590,7 +660,24 @@
 
     }
 
-    a#scrollUp {right: 25px;}
+    @media screen and (max-width: 325px) {
+       .front2 {top: -4px;}
+       .front3 {
+        left: -25px;
+        top: 30px;
+       }
+       .front4 {top: 40px;}
+
+       img.play{top: 198rem;}
+
+        .quote {
+            right: -48%;}
+
+        .quote h4 {margin-top: 6.125rem;}
+
+        #trust.container {margin-left: 15%;}
+
+    }
 
 
     
