--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@
     display: flex;
     position: fixed;;
     top: 0px;
-    right: 0px;
     height: 15vh;
     width: 100%;
+    max-width: 1440px;
     align-items: center;
     z-index: 500;
     background-image: linear-gradient(-65deg, #f0f0f5 26%, #fff 22% 11% , #f2f2f2 31%);
+    overflow: hidden;
 }
 
 .navbar-toggler {
@@ -433,6 +434,7 @@ div.large a {
     margin-top: 6.25rem;
     display: flex;
     justify-content: space-between;
+    margin-left: 10px;
 
 }
 
@@ -481,9 +483,7 @@ div.photos img {
 }
 
 img#man {
-    position: absolute;
-    width: 5%;
-    left: 300px;
+    width: 22%;
 }
 
 div.form {
